# sudocode

./: .gitignore  CONTRIBUTING.md  FRICTION.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
backends/haskell/: Emit.hs  SudoJson.hs  SudoRt.hs  hs.sudoc-backend.json
conformance/: README.md
conformance/golden/: bfs.ir  binary_search.ir  bst.ir  gcd.ir  insertion_sort.ir  order_dependent.ir  palindrome.ir  quicksort.ir  quine.ir  two_sum.ir
conformance/semantics/: arithmetic.sudo  floats.sudo  generics.sudo  hoisting.sudo  loops.sudo  module_constants.sudo  reserved_idents.sudo  structures.sudo  text_and_lists.sudo  traps.sudo  value_semantics.sudo
examples/: README.md  bfs.sudo  binary_search.sudo  bst.sudo  gcd.sudo  insertion_sort.sudo  palindrome.sudo  quicksort.sudo  quine.sudo  two_sum.sudo
examples/pitfalls/: order_dependent.sudo
notes/: README.md  adversarial-findings-2026-07-22.md  decision-log.md  external-review-2026-07-22.md  friction-haskell.md  friction-rust.md  friction-swift.md  friction-zig.md  lane-recipe.md
rules_sudo/: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  extensions.bzl  versions.bzl
rules_sudo/e2e/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-e2e  bazel-out  bazel-testlogs
rules_sudo/e2e/js/: BUILD.bazel  greet_test.sh
rules_sudo/e2e/py/: BUILD.bazel  greet_test.py
rules_sudo/e2e/sudo/: BUILD.bazel  greet.sudo  shout.sudo
rules_sudo/private/: BUILD.bazel  rules.bzl
spec/: backend-guide.md  language.md  lockstep.md  protocol.md
spec/protocol/: ir-schema.json
stdlib/: README.md  bigint.sudo  regex.sudo  sorting.sudo  strings.sudo
sudoc/: Cargo.toml
sudoc/crates/backend_c/: Cargo.toml
sudoc/crates/backend_c/src/: boundary.rs  code_gen.rs  lib.rs  program.rs  reserved.rs  types_gen.rs
sudoc/crates/backend_c/src/runtime/: sudo_rt.c  sudo_rt.h
sudoc/crates/backend_c/tests/: execute.rs  sanitizer.rs
sudoc/crates/backend_ext/: Cargo.toml
sudoc/crates/backend_ext/src/: lib.rs
sudoc/crates/backend_ext/tests/: adapter.rs
sudoc/crates/backend_js/: Cargo.toml
sudoc/crates/backend_js/src/: boundary.rs  lib.rs  reserved.rs
sudoc/crates/backend_js/src/runtime/: _sudo_rt.mjs
sudoc/crates/backend_js/tests/: boundary.rs  emit.rs  execute.rs
sudoc/crates/backend_py/: Cargo.toml
sudoc/crates/backend_py/src/: lib.rs  reserved.rs
sudoc/crates/backend_py/src/runtime/: _sudo_rt.py
sudoc/crates/backend_py/tests/: emit.rs  execute.rs
sudoc/crates/backend_rs/: Cargo.toml
sudoc/crates/backend_rs/src/: lib.rs  reserved.rs
sudoc/crates/backend_rs/src/runtime/: sudo_rt.rs
sudoc/crates/backend_rs/tests/: emit.rs  execute.rs
sudoc/crates/backend_swift/: Cargo.toml
sudoc/crates/backend_swift/src/: code_gen.rs  lib.rs  program.rs  types_gen.rs
sudoc/crates/backend_swift/src/runtime/: sudo_rt.swift
sudoc/crates/backend_swift/tests/: emit.rs  execute.rs
sudoc/crates/backend_zig/: Cargo.toml
sudoc/crates/backend_zig/src/: lib.rs  reserved.rs
sudoc/crates/backend_zig/src/runtime/: sudo_rt.zig
sudoc/crates/backend_zig/tests/: execute.rs
sudoc/crates/cli/: Cargo.toml
sudoc/crates/cli/src/: main.rs
sudoc/crates/cli/tests/: discovery_collision.rs  search_path.rs  std_equivalence.rs
sudoc/crates/harness/: Cargo.toml
sudoc/crates/harness/src/: lib.rs
sudoc/crates/harness/tests/: discovery.rs  lockstep.rs  sanitizer_classification.rs  wire_trip.rs
sudoc/crates/ir/: Cargo.toml
sudoc/crates/ir/src/: lib.rs  mangle.rs  pretty.rs  wire.rs
sudoc/crates/ir/tests/: roundtrip.rs  schema_golden.rs
sudoc/crates/sdk/: Cargo.toml
sudoc/crates/sdk/src/: lib.rs
sudoc/crates/stdlib/: Cargo.toml
sudoc/crates/stdlib/src/: lib.rs
sudoc/crates/syntax/: Cargo.toml
sudoc/crates/syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs
sudoc/crates/syntax/tests/: lexer.rs  parser.rs
sudoc/crates/types/: Cargo.toml
sudoc/crates/types/src/: finalize.rs  func_check.rs  hoist.rs  lib.rs
sudoc/crates/types/tests/: checker.rs  golden.rs  imports.rs
