module(
    name = "rules_sudo",
    version = "0.2.1",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Self-invoke so Label("@sudo_toolchain//:sudoc") defaults baked into
# private/rules.bzl resolve against this module's repo mapping.
sudo = use_extension("//:extensions.bzl", "sudo")
sudo.toolchain(version = "v0.1.0")
use_repo(sudo, "sudo_toolchain")
