[workspace]
resolver = "2"
members = ["crates/syntax", "crates/types", "crates/ir", "crates/sdk", "crates/backend_py", "crates/backend_c", "crates/backend_js", "crates/harness", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
