module(name = "rules_sudo_e2e", version = "0.0.0")

bazel_dep(name = "rules_sudo", version = "0.1.0")
local_path_override(module_name = "rules_sudo", path = "..")

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

sudo = use_extension("@rules_sudo//:extensions.bzl", "sudo")
sudo.toolchain(
    version = "v0.1.0",
    sha256s = {
        "aarch64-apple-darwin": "0829935f9a68a142b6179f58c84508cb9d07c7b08be6253c653677e7a991806b",
        "x86_64-unknown-linux-gnu": "3343d00da2d6a816671611d0c10b72630e0ad0e5c192975ed47b9ccce5834e94",
        "aarch64-unknown-linux-gnu": "01906a8354101a6e4cc2b1804e8e6e5862c774ed7813a6332643637d5eb98b07",
    },
)
use_repo(sudo, "sudo_toolchain")
