[package]
name = "sudoc-backend-c"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sudoc_backend_c"

[dependencies]
sudoc-ir = { path = "../ir" }
sudoc-sdk = { path = "../sdk" }

[dev-dependencies]
sudoc-types = { path = "../types" }

[lints]
workspace = true
