[package]
name = "sudoc-backend-zig"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sudoc_backend_zig"

[dependencies]
sudoc-ir = { path = "../ir" }
sudoc-sdk = { path = "../sdk" }

[dev-dependencies]
sudoc-types = { path = "../types" }

[lints]
workspace = true
