[package]
name = "sudoc-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sudoc_harness"

[dependencies]
sudoc-ir = { path = "../ir" }
sudoc-sdk = { path = "../sdk" }
sudoc-types = { path = "../types" }
sudoc-backend-py = { path = "../backend_py" }
sudoc-backend-c = { path = "../backend_c" }
sudoc-backend-js = { path = "../backend_js" }
sudoc-backend-swift = { path = "../backend_swift" }
sudoc-backend-rs = { path = "../backend_rs" }
sudoc-backend-zig = { path = "../backend_zig" }
sudoc-backend-ext = { path = "../backend_ext" }

[lints]
workspace = true
